<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCharacterCreation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNumberItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribute_name" />

            <EditText
                android:id="@+id/editTextCharacterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonCharacterCreationCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characters_creation_create" />

        <TextView
            android:id="@+id/textViewCharacterCreationResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <Button
            android:id="@+id/buttonCharacterCreationSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characters_creation_keep" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonCharacterCreateBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activities_button_back"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>